<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@drawable/about_bg">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88ffffff" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/version_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="PiMonitor" />

        </RelativeLayout>

        <include layout="@layout/view_divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/github_header"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/github_body"
            android:textSize="@dimen/text_size_small" />

        <ImageView
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/github"/>

        <include layout="@layout/view_divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/about_body"
            android:textSize="@dimen/text_size_small" />

        <include layout="@layout/view_divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/setup_header"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/setup_body"
            android:textSize="@dimen/text_size_small" />

        
        <View
            android:layout_width="match_parent"
            android:layout_height="64dp" />

    </LinearLayout>
</ScrollView>